--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -22,3 +22,12 @@ jobs:
           chmod +x scripts/buildprod.sh 
           ./scripts/buildprod.sh
 
+      - name: Set up Cloud SDK
+        uses: google-github-actions/setup-gcloud@v0
+        with:
+          service_account_key: ${{ secrets.GCP_CREDENTIALS }}
+          export_default_credentials: true
+
+      - name: Build Docker image
+        run: gcloud builds submit --tag us-central1-docker.pkg.dev/notely-446019/notely-ar-repo/notely:latest .
+
