--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -33,6 +33,9 @@ jobs:
       - name: 'Use gcloud CLI'
         run: 'gcloud info'
 
+      - name: List directory contents
+        run: ls -R
+
       - name: Build Docker image
         run: gcloud builds submit --tag us-central1-docker.pkg.dev/notely-446019/notely-ar-repo/notely:latest .
 
