--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -7,6 +7,9 @@ on:
 jobs:
   Deploy:
     runs-on: ubuntu-latest 
+
+    env:
+      DATABASE_URL: ${{ secrets.DATABASE_URL }}
     
     steps:
       - name: Check out code
@@ -16,6 +19,9 @@ jobs:
         uses: actions/setup-go@v5
         with:
           go-version: "1.23.0"
+
+      - name: Install Goose
+        run: go install github.com/pressly/goose/v3/cmd/goose@latest
 
       - name: Build application
         run:
@@ -38,6 +44,9 @@ jobs:
 
       - name: Build Docker image
         run: gcloud builds submit --tag us-central1-docker.pkg.dev/notely-446019/notely-ar-repo/notely:latest .
+
+      - name: Run migrations
+        run: ./scripts/migrateup.sh
 
       - name: Deploy to Cloud Run 
         run: gcloud run deploy notely --image us-central1-docker.pkg.dev/notely-446019/notely-ar-repo/notely:latest --region us-central1 --allow-unauthenticated --project notely-446019 --max-instances=4
